03.business-os/AICompanyManager/900.meta/white_screen_root_cause_20260501_061807/010_node_check.txt
============================================================
node --check
============================================================
---- server ----
SERVER_NODE_CHECK_CODE=0

---- clean core ----
/data/data/com.termux/files/home/03.civilization-development/03.business-os/AICompanyManager/assets/js/aicm-production-core.js:1082
async async function aicmAxcSyncRolePlacementsForPayload(payload) {
      ^^^^^

SyntaxError: Unexpected token 'async'
    at wrapSafe (node:internal/modules/cjs/loader:1743:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.14.1
CORE_NODE_CHECK_CODE=1
